[M146] [Tab Search] Prevent flickering when cursor placed between tabs
Original change's description:
> [Tab Search] Prevent flickering when cursor placed between tabs
> 
> Fixed: 488251820
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7621860
> Auto-Submit: Marwan Tammam <quarz@chromium.org>
> Commit-Queue: Steven Luong <stluong@chromium.org>
> Commit-Queue: Marwan Tammam <quarz@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1592786}

(cherry picked from commit fc68ec8737013140c1537f70df8d54236124fb46)

Bug: 490095895,488251820
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7644368
Auto-Submit: Chrome Cherry Picker <chrome-cherry-picker@chops-service-accounts.iam.gserviceaccount.com>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7680@{#2037}
Cr-Branched-From: 76b7d80e5cda23fe6537eed26d68c92e995c7f39-refs/heads/main@{#1582197}

--- a/chrome/browser/resources/tab_search/tab_search_item.css
+++ b/chrome/browser/resources/tab_search/tab_search_item.css
@@ -16,6 +16,7 @@
    --audio-icon-color: var(--color-tab-search-media-icon);
    --glic-active-icon-color: var(--color-tab-search-media-glic-active-icon);
    --media-recording-icon-color:  var(--color-tab-search-media-recording-icon);
+   position: relative;
  }
 
 :host([size=large]) {
